# card-games-in-python

./: README.md  environment.yml  setup.cfg  setup.py
src/cards/: __init__.py  card_deck.py  cards.py  color.py  full_deck.py  label.py  sample_cards.py  suit.py
src/cards/decks/: __init__.py  full_deck.py  portuguese_deck.py  standard_deck.py
src/cards/games/: high_card.py
src/decks/: __init__.py  card_deck.py  full_deck.py  portuguese_deck.py  standard_deck.py
src/decks/blackjack/: __init__.py
src/decks/blackjack_deck/: __init__.py
src/decks/full_deck/: __init__.py
src/decks/portuguese/: deck.py  playing_card.py
src/decks/portuguese_deck/: __init__.py  deck.py  playing_card.py
src/decks/queen_of_spades/: __init__.py  deck.py  playing_card.py
src/decks/standard/: __init__.py
src/decks/standard_deck/: __init__.py
