[metadata]
name = card_games_in_python
version = 0.0.1
author = Patrick Da Silva
author_email = patrick1dasilva@gmail.com
description = Card game software developed in python
long_description = file: README.md
keywords = card games python software
license = GNU General Public License
install_requires = file: requirements.txt
classifiers = 
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages = find:
scripts = 
    
[options.packages.find]
where=src